fix for chevron alignment not working for email and other types

--- a/node-app/src/views/core/components/form/container/style.scss
+++ b/node-app/src/views/core/components/form/container/style.scss
@@ -244,15 +244,13 @@
 }
 //style for cta form input form alignment
 @media (max-width: $mobile-screen-max){
-    .cta-content-icon-wrapper{
-        .cta-form-wrapper{
-            .cmp-form-text{
-                input{
-                    width: 100%;
-                }
-            } 
-        }
-    }
+    .cta-form-wrapper{
+        .cmp-form-text{
+            input{
+                width: 100%;
+            }
+        } 
+    } 
 }
 @media (min-width: $desktop-screen-min)
 {
